[metadata]
name = netbom
description = This library provides tooling to import, process and convert BOM and schematic netlists to Python objects, and then convet them to JSON format or Python dictionaries. BOM and netlists are supported by one library because some of netlist formats may also be a source of BOM.
long_description_content_type = text/x-rst
readme = "README.rst"
url = https://github.com/partmanager/netbom
project_urls =
    Bug Tracker = https://github.com/partmanager/netbom/issues
    Changelog = https://github.com/partmanager/netbom/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    json

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    netbom = netbom.app:entry_point
