[metadata]
name = netbom
description = Library to read, convert and process electrical netlists and bill of materials generated both in Alitum Designer and KiCad.
long_description = file: README.rst
author = Piotr Kuligowski
readme = "README"
url = https://github.com/partmanager/netbom
project_urls =
    Bug Tracker = https://github.com/partmanager/netbom/issues
    Changelog = https://github.com/partmanager/netbom/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license_file = LICENCE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    netbom = netbom.app:entry_point
