[metadata]
name = netbom
description = Library to read, convert and process electrical netlists and bill of materials generated both in Altium Designer and KiCad.
long_description = file: README.rst
author = Piotr Kuligowski
readme = "README"
url = https://github.com/partmanager/netbom
project_urls =
    Bug Tracker = https://github.com/partmanager/netbom/issues
    Changelog = https://github.com/partmanager/netbom/releases
    Source Code = https://github.com/partmanager/netbom
    Documentation = https://partmanager.github.io/netbom
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    netbom = netbom.app:entry_point
